# django-cms-tutorial

./: pyproject.toml
tutorial/: README.md
tutorial/tutorial/: settings.py  urls.py
