[tool.poetry]
name = "tutoriales de la documentación de djangocms"
version = "0.1.0"
description = ""
authors = ["Raidel <raidelnapoles95@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django-cms = "^4.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
